// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radar 1`] = `
{
  "annotation": {},
  "chartType": "radar",
  "config": {
    "radar": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "radar": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2019-profit",
      "__Dim_Color__": "2019",
      "__Dim_Detail__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 100,
        "test": 10,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "type": "A",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2019-sales",
      "__Dim_Color__": "2019",
      "__Dim_Detail__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 100,
        "test": 10,
        "type": "A",
      },
      "date": "2019",
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2019-test",
      "__Dim_Color__": "2019",
      "__Dim_Detail__": "2019",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 100,
        "test": 10,
        "type": "A",
      },
      "date": "2019",
      "test": 10,
      "type": "A",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2020-profit",
      "__Dim_Color__": "2020",
      "__Dim_Detail__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 100,
        "test": 20,
        "type": "A",
      },
      "date": "2020",
      "profit": 30,
      "type": "A",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2020-sales",
      "__Dim_Color__": "2020",
      "__Dim_Detail__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 100,
        "test": 20,
        "type": "A",
      },
      "date": "2020",
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2020-test",
      "__Dim_Color__": "2020",
      "__Dim_Detail__": "2020",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 100,
        "test": 20,
        "type": "A",
      },
      "date": "2020",
      "test": 20,
      "type": "A",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2021-profit",
      "__Dim_Color__": "2021",
      "__Dim_Detail__": "2021",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30,
        "sales": 100,
        "test": 30,
        "type": "A",
      },
      "date": "2021",
      "profit": 30,
      "type": "A",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2021-sales",
      "__Dim_Color__": "2021",
      "__Dim_Detail__": "2021",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30,
        "sales": 100,
        "test": 30,
        "type": "A",
      },
      "date": "2021",
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2021-test",
      "__Dim_Color__": "2021",
      "__Dim_Detail__": "2021",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30,
        "sales": 100,
        "test": 30,
        "type": "A",
      },
      "date": "2021",
      "test": 30,
      "type": "A",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2022-profit",
      "__Dim_Color__": "2022",
      "__Dim_Detail__": "2022",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "profit": 50,
        "sales": 100,
        "test": 40,
        "type": "A",
      },
      "date": "2022",
      "profit": 50,
      "type": "A",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2022-sales",
      "__Dim_Color__": "2022",
      "__Dim_Detail__": "2022",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2022",
        "profit": 50,
        "sales": 100,
        "test": 40,
        "type": "A",
      },
      "date": "2022",
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2022-test",
      "__Dim_Color__": "2022",
      "__Dim_Detail__": "2022",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2022",
        "profit": 50,
        "sales": 100,
        "test": 40,
        "type": "A",
      },
      "date": "2022",
      "test": 40,
      "type": "A",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2023-profit",
      "__Dim_Color__": "2023",
      "__Dim_Detail__": "2023",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "profit": 40,
        "sales": 100,
        "test": 50,
        "type": "A",
      },
      "date": "2023",
      "profit": 40,
      "type": "A",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2023-sales",
      "__Dim_Color__": "2023",
      "__Dim_Detail__": "2023",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2023",
        "profit": 40,
        "sales": 100,
        "test": 50,
        "type": "A",
      },
      "date": "2023",
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2023-test",
      "__Dim_Color__": "2023",
      "__Dim_Detail__": "2023",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2023",
        "profit": 40,
        "sales": 100,
        "test": 50,
        "type": "A",
      },
      "date": "2023",
      "test": 50,
      "type": "A",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2019-profit",
      "__Dim_Color__": "2019",
      "__Dim_Detail__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 100,
        "test": 90,
        "type": "C",
      },
      "date": "2019",
      "profit": 10,
      "type": "C",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2019-sales",
      "__Dim_Color__": "2019",
      "__Dim_Detail__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 100,
        "test": 90,
        "type": "C",
      },
      "date": "2019",
      "sales": 100,
      "type": "C",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2019-test",
      "__Dim_Color__": "2019",
      "__Dim_Detail__": "2019",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 90,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 100,
        "test": 90,
        "type": "C",
      },
      "date": "2019",
      "test": 90,
      "type": "C",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2020-profit",
      "__Dim_Color__": "2020",
      "__Dim_Detail__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 100,
        "test": 70,
        "type": "C",
      },
      "date": "2020",
      "profit": 30,
      "type": "C",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2020-sales",
      "__Dim_Color__": "2020",
      "__Dim_Detail__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 100,
        "test": 70,
        "type": "C",
      },
      "date": "2020",
      "sales": 100,
      "type": "C",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2020-test",
      "__Dim_Color__": "2020",
      "__Dim_Detail__": "2020",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 70,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 100,
        "test": 70,
        "type": "C",
      },
      "date": "2020",
      "test": 70,
      "type": "C",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2021-profit",
      "__Dim_Color__": "2021",
      "__Dim_Detail__": "2021",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30,
        "sales": 100,
        "test": 60,
        "type": "C",
      },
      "date": "2021",
      "profit": 30,
      "type": "C",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2021-sales",
      "__Dim_Color__": "2021",
      "__Dim_Detail__": "2021",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30,
        "sales": 100,
        "test": 60,
        "type": "C",
      },
      "date": "2021",
      "sales": 100,
      "type": "C",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2021-test",
      "__Dim_Color__": "2021",
      "__Dim_Detail__": "2021",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30,
        "sales": 100,
        "test": 60,
        "type": "C",
      },
      "date": "2021",
      "test": 60,
      "type": "C",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2022-profit",
      "__Dim_Color__": "2022",
      "__Dim_Detail__": "2022",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "profit": 50,
        "sales": 100,
        "test": 50,
        "type": "C",
      },
      "date": "2022",
      "profit": 50,
      "type": "C",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2022-sales",
      "__Dim_Color__": "2022",
      "__Dim_Detail__": "2022",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2022",
        "profit": 50,
        "sales": 100,
        "test": 50,
        "type": "C",
      },
      "date": "2022",
      "sales": 100,
      "type": "C",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2022-test",
      "__Dim_Color__": "2022",
      "__Dim_Detail__": "2022",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "profit": 50,
        "sales": 100,
        "test": 50,
        "type": "C",
      },
      "date": "2022",
      "test": 50,
      "type": "C",
    },
    {
      "__Dim_Angle__": "profit",
      "__Dim_ColorId__": "2023-profit",
      "__Dim_Color__": "2023",
      "__Dim_Detail__": "2023",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "profit": 40,
        "sales": 100,
        "test": 20,
        "type": "C",
      },
      "date": "2023",
      "profit": 40,
      "type": "C",
    },
    {
      "__Dim_Angle__": "sales",
      "__Dim_ColorId__": "2023-sales",
      "__Dim_Color__": "2023",
      "__Dim_Detail__": "2023",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2023",
        "profit": 40,
        "sales": 100,
        "test": 20,
        "type": "C",
      },
      "date": "2023",
      "sales": 100,
      "type": "C",
    },
    {
      "__Dim_Angle__": "test",
      "__Dim_ColorId__": "2023-test",
      "__Dim_Color__": "2023",
      "__Dim_Detail__": "2023",
      "__MeaId__": "test",
      "__MeaName__": "test",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2023",
        "profit": 40,
        "sales": 100,
        "test": 20,
        "type": "C",
      },
      "date": "2023",
      "test": 20,
      "type": "C",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "profit",
          "sales": "sales",
          "test": "test",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "radar",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-profit": "2019",
          "2019-sales": "2019",
          "2019-test": "2019",
          "2020-profit": "2020",
          "2020-sales": "2020",
          "2020-test": "2020",
          "2021-profit": "2021",
          "2021-sales": "2021",
          "2021-test": "2021",
          "2022-profit": "2022",
          "2022-sales": "2022",
          "2022-test": "2022",
          "2023-profit": "2023",
          "2023-sales": "2023",
          "2023-test": "2023",
        },
        "colorItems": [
          "2019-profit",
          "2019-sales",
          "2019-test",
          "2020-profit",
          "2020-sales",
          "2020-test",
          "2021-profit",
          "2021-sales",
          "2021-test",
          "2022-profit",
          "2022-sales",
          "2022-test",
          "2023-profit",
          "2023-sales",
          "2023-test",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "日期",
      "id": "date",
      "location": "dimension",
    },
    {
      "alias": "类型",
      "id": "type",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [
      "__MeaName__",
    ],
    "color": [
      "date",
    ],
    "detail": [
      "date",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
    {
      "alias": "test",
      "id": "test",
    },
  ],
}
`;

exports[`radar 2`] = `
{
  "angleField": "__Dim_Angle__",
  "animation": true,
  "area": {
    "visible": true,
  },
  "axes": [
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "nice": true,
      "orient": "angle",
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "label": {
        "visible": true,
      },
      "nice": true,
      "orient": "radius",
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "2019-profit",
      "2019-sales",
      "2019-test",
      "2020-profit",
      "2020-sales",
      "2020-test",
      "2021-profit",
      "2021-sales",
      "2021-test",
      "2022-profit",
      "2022-sales",
      "2022-test",
      "2023-profit",
      "2023-sales",
      "2023-test",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "radar",
    "values": [
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2019-profit",
        "__Dim_Color__": "2019",
        "__Dim_Detail__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 100,
          "test": 10,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "type": "A",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2019-sales",
        "__Dim_Color__": "2019",
        "__Dim_Detail__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 100,
          "test": 10,
          "type": "A",
        },
        "date": "2019",
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2019-test",
        "__Dim_Color__": "2019",
        "__Dim_Detail__": "2019",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 100,
          "test": 10,
          "type": "A",
        },
        "date": "2019",
        "test": 10,
        "type": "A",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2020-profit",
        "__Dim_Color__": "2020",
        "__Dim_Detail__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 100,
          "test": 20,
          "type": "A",
        },
        "date": "2020",
        "profit": 30,
        "type": "A",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2020-sales",
        "__Dim_Color__": "2020",
        "__Dim_Detail__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 100,
          "test": 20,
          "type": "A",
        },
        "date": "2020",
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2020-test",
        "__Dim_Color__": "2020",
        "__Dim_Detail__": "2020",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 100,
          "test": 20,
          "type": "A",
        },
        "date": "2020",
        "test": 20,
        "type": "A",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2021-profit",
        "__Dim_Color__": "2021",
        "__Dim_Detail__": "2021",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 100,
          "test": 30,
          "type": "A",
        },
        "date": "2021",
        "profit": 30,
        "type": "A",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2021-sales",
        "__Dim_Color__": "2021",
        "__Dim_Detail__": "2021",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 100,
          "test": 30,
          "type": "A",
        },
        "date": "2021",
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2021-test",
        "__Dim_Color__": "2021",
        "__Dim_Detail__": "2021",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 100,
          "test": 30,
          "type": "A",
        },
        "date": "2021",
        "test": 30,
        "type": "A",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2022-profit",
        "__Dim_Color__": "2022",
        "__Dim_Detail__": "2022",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "profit": 50,
          "sales": 100,
          "test": 40,
          "type": "A",
        },
        "date": "2022",
        "profit": 50,
        "type": "A",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2022-sales",
        "__Dim_Color__": "2022",
        "__Dim_Detail__": "2022",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2022",
          "profit": 50,
          "sales": 100,
          "test": 40,
          "type": "A",
        },
        "date": "2022",
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2022-test",
        "__Dim_Color__": "2022",
        "__Dim_Detail__": "2022",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2022",
          "profit": 50,
          "sales": 100,
          "test": 40,
          "type": "A",
        },
        "date": "2022",
        "test": 40,
        "type": "A",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2023-profit",
        "__Dim_Color__": "2023",
        "__Dim_Detail__": "2023",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "profit": 40,
          "sales": 100,
          "test": 50,
          "type": "A",
        },
        "date": "2023",
        "profit": 40,
        "type": "A",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2023-sales",
        "__Dim_Color__": "2023",
        "__Dim_Detail__": "2023",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2023",
          "profit": 40,
          "sales": 100,
          "test": 50,
          "type": "A",
        },
        "date": "2023",
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2023-test",
        "__Dim_Color__": "2023",
        "__Dim_Detail__": "2023",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2023",
          "profit": 40,
          "sales": 100,
          "test": 50,
          "type": "A",
        },
        "date": "2023",
        "test": 50,
        "type": "A",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2019-profit",
        "__Dim_Color__": "2019",
        "__Dim_Detail__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 100,
          "test": 90,
          "type": "C",
        },
        "date": "2019",
        "profit": 10,
        "type": "C",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2019-sales",
        "__Dim_Color__": "2019",
        "__Dim_Detail__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 100,
          "test": 90,
          "type": "C",
        },
        "date": "2019",
        "sales": 100,
        "type": "C",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2019-test",
        "__Dim_Color__": "2019",
        "__Dim_Detail__": "2019",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 90,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 100,
          "test": 90,
          "type": "C",
        },
        "date": "2019",
        "test": 90,
        "type": "C",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2020-profit",
        "__Dim_Color__": "2020",
        "__Dim_Detail__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 100,
          "test": 70,
          "type": "C",
        },
        "date": "2020",
        "profit": 30,
        "type": "C",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2020-sales",
        "__Dim_Color__": "2020",
        "__Dim_Detail__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 100,
          "test": 70,
          "type": "C",
        },
        "date": "2020",
        "sales": 100,
        "type": "C",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2020-test",
        "__Dim_Color__": "2020",
        "__Dim_Detail__": "2020",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 70,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 100,
          "test": 70,
          "type": "C",
        },
        "date": "2020",
        "test": 70,
        "type": "C",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2021-profit",
        "__Dim_Color__": "2021",
        "__Dim_Detail__": "2021",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 100,
          "test": 60,
          "type": "C",
        },
        "date": "2021",
        "profit": 30,
        "type": "C",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2021-sales",
        "__Dim_Color__": "2021",
        "__Dim_Detail__": "2021",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 100,
          "test": 60,
          "type": "C",
        },
        "date": "2021",
        "sales": 100,
        "type": "C",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2021-test",
        "__Dim_Color__": "2021",
        "__Dim_Detail__": "2021",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 100,
          "test": 60,
          "type": "C",
        },
        "date": "2021",
        "test": 60,
        "type": "C",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2022-profit",
        "__Dim_Color__": "2022",
        "__Dim_Detail__": "2022",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "profit": 50,
          "sales": 100,
          "test": 50,
          "type": "C",
        },
        "date": "2022",
        "profit": 50,
        "type": "C",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2022-sales",
        "__Dim_Color__": "2022",
        "__Dim_Detail__": "2022",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2022",
          "profit": 50,
          "sales": 100,
          "test": 50,
          "type": "C",
        },
        "date": "2022",
        "sales": 100,
        "type": "C",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2022-test",
        "__Dim_Color__": "2022",
        "__Dim_Detail__": "2022",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "profit": 50,
          "sales": 100,
          "test": 50,
          "type": "C",
        },
        "date": "2022",
        "test": 50,
        "type": "C",
      },
      {
        "__Dim_Angle__": "profit",
        "__Dim_ColorId__": "2023-profit",
        "__Dim_Color__": "2023",
        "__Dim_Detail__": "2023",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "profit": 40,
          "sales": 100,
          "test": 20,
          "type": "C",
        },
        "date": "2023",
        "profit": 40,
        "type": "C",
      },
      {
        "__Dim_Angle__": "sales",
        "__Dim_ColorId__": "2023-sales",
        "__Dim_Color__": "2023",
        "__Dim_Detail__": "2023",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2023",
          "profit": 40,
          "sales": 100,
          "test": 20,
          "type": "C",
        },
        "date": "2023",
        "sales": 100,
        "type": "C",
      },
      {
        "__Dim_Angle__": "test",
        "__Dim_ColorId__": "2023-test",
        "__Dim_Color__": "2023",
        "__Dim_Detail__": "2023",
        "__MeaId__": "test",
        "__MeaName__": "test",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2023",
          "profit": 40,
          "sales": 100,
          "test": 20,
          "type": "C",
        },
        "date": "2023",
        "test": 20,
        "type": "C",
      },
    ],
  },
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "point": {
    "state": {
      "dimension_hover": {
        "outerBorder": {
          "distance": 2,
          "lineWidth": 4,
          "strokeOpacity": 0.25,
        },
        "scaleX": 1.4,
        "scaleY": 1.4,
      },
    },
  },
  "radiusField": "__MeaValue__",
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "radar",
}
`;
